[package]
name = "rust-contactbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.27"
mongodb = "2.6.0"
serde = "1.0.158"
tokio = "1.26.0"
text_io = "0.1.12"
clearscreen = "2.0.1"
colored = "2.0.4"
